Create basic logic for authentication with user-svc, fill auth docs.
