# docs/openapi.yaml
@@ -11,9 +11,69 @@ servers:
   - url: http://widedelivery.localhost/api
 
 paths:
+  /auth/register:
+    post:
+      description: Register the user.
+      tags:
+        - auth
+      requestBody:
+        required: true
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/Registration'
+  /auth/login:
+    post:
+      description: Login the user. Receive access_token and refresh_token pair.
+      tags:
+        - auth
+      requestBody:
+        required: true
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/Login'
+      responses:
+        '200':
+          description: User signed-in successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AccessTokens'
+        '500':
+          description: Internal error.
+
+  /auth/oauth:
+    post:
+      description: Login or register the user with OAuth token. Receive access_token and refresh_token pair.
+      tags:
+        - auth
+      requestBody:
+        required: true
+        content:
+          'application/json':
+            schema:
+              type: object
+              properties:
+                oauth_token:
+                  type: string
+                  description: OAuth token, received from provider (e.g. Google)
+              example:
+                oauth_token: "eyJhbGciOiJSUzI1NiIsImtpZCI6IjA4YmY1YzM3NzJkZDRlN2E3MjdhMTAxYmY1MjBmNjU3NWNhYzMyNmYiLCJ0eXAiOiJKV1QifQ.eyJpc3MiOiJodHRwczovL2FjY291bnRzLmdvb2dsZS5jb20iLCJhenAiOiI1NDg0OTIwMTc1MjUtMmkwMGtyMG5yMTRhY21yZnZyMHByMHNqYmJqYWJpbzUuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJhdWQiOiI1NDg0OTIwMTc1MjUtdXI1ajZ0ZnJvcjBnNHVkZmMxMmN2bWJqbzVidnZubDEuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJzdWIiOiIxMDQwNzI5MDIwOTc1NjE2NTYzMDQiLCJlbWFpbCI6ImFydHBhZGFuQGdtYWlsLmNvbSIsImVtYWlsX3ZlcmlmaWVkIjp0cnVlLCJuYW1lIjoiQXJ0ZW0gUGFkYWxrYSIsInBpY3R1cmUiOiJodHRwczovL2xoMy5nb29nbGV1c2VyY29udGVudC5jb20vYS9BQ2c4b2NJR2ZlcmdWUmVpbldQazNHcGtuSDhBQUFjTHVrVWFvQzhOMWV4YU0tVE5oa289czk2LWMiLCJnaXZlbl9uYW1lIjoiQXJ0ZW0iLCJmYW1pbHlfbmFtZSI6IlBhZGFsa2EiLCJsb2NhbGUiOiJlbiIsImlhdCI6MTcxMDAyMjE4MiwiZXhwIjoxNzEwMDI1NzgyfQ.TBSKetAcGRdPKLDvGnVNk0FhIsUrD8tZuU6tIOecB9611LV12pyP3wpfyrRBylWnu1BcD4xy4NL4hwdpBR7vR04PRPraneShYaAHJILPOncmYfGLkP11D8Yefp-asCSna_n6eHMw3jwHgyiMh13v1W6RsB7hkeNAnRF6JSOUD3P_MYWUQgitqJgkkzCqeqnllL-YeMW067IR3XrCnCAJ8I6ND8PP6IQU53JZfBWbOgNjTPd99NX8GKl6ZcTVHhAGBI73xzbgawgPo3ihxB-h-zzZXGvZ36o-oLkVHURRHrpsgJiGfqHYNc_yode4ptcQaczobWsrdvVroSyCB3g81A"
+      responses:
+        '200':
+          description: User signed-in successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AccessTokens'
+        '500':
+          description: Internal error.
+
+
   /reservations:
     post:
-      description: Create new reservation, start of picking process
+      description: THIS IS EXAMPLE. CURRENTLY DON'T WORK! Create new reservation, start of picking process
       tags:
         - picking
         - order
@@ -42,9 +102,10 @@ paths:
 
 components:
   securitySchemes:
-    BasicAuth:
+    bearerAuth:
       type: http
-      scheme: basic
+      scheme: bearer
+      bearerFormat: JWT
 
   schemas:
     Reservation:
@@ -76,4 +137,55 @@ components:
         orderCreationTime:
           type: string
           description: 'Order creation time in format [YYYY-MM-DDThh:mm:ss]'
+    Registration:
+      type: object
+      required:
+        - email
+        - password
+      properties:
+        name:
+          type: string
+          description: User name
+        email:
+          type: string
+          description: User email
+        password:
+          type: string
+          description: User password
+        provider:
+          type: string
+          description: (Optional) Should be local for now. Google sign-in uses another endpoint
+      example:
+        name: 'Stooosy'
+        email: 'example-mail@gmail.com'
+        password: 'bla-bla-artem-yhylyant123'
+        provider: 'local'
+    Login:
+      type: object
+      required:
+        - email
+        - password
+      properties:
+        email:
+          type: string
+          description: User email
+        password:
+          type: string
+          description: User password
+      example:
+        email: 'example-mail@gmail.com'
+        password: 'bla-bla-artem-yhylyant123'
+    AccessTokens:
+      type: object
+      properties:
+        access_token:
+          type: string
+          description: Token which should be used as Bearer Token when sending requests to the API.
+        refresh_token:
+          type: string
+          description: This token is used to receive new access_token without sign-out the user from the app.
+
+
+security:
+  - bearerAuth: [ ]
 
