# src/auth/auth.controller.ts
@@ -1,19 +1,65 @@
 import { Request, Response, NextFunction } from 'express';
-import {AuthServiceClient} from "../../pb/auth/AuthService";
+import authService from "../../services/auth.service";
+import {AUTH_PROVIDERS} from "../../constants/auth-constants";
+import {RegistrationErrorsMatcher} from "../../utils/grpc-http-error-matcher";
 
-export const registerUser = (req: Request, res: Response, next: NextFunction, authService: AuthServiceClient) => {
-    const {name, email, password, phoneNumber, provider} = req.body;
+
+export const registerUser = async (req: Request, res: Response, next: NextFunction) => {
+    const {name, email, password, phoneNumber} = req.body;
+    // todo validate if all exists (mb with middleware)
     authService.signUpUser({
-        name: 'name',
-        email: 'email',
-        password: 'password',
-        provider: 'provider',
+        name: name,
+        email: email,
+        password: password,
+        provider: AUTH_PROVIDERS.LOCAL,
+    }, (err: any, result: any) => {
+        if (err) {
+            console.error(err); // todo logging
+            res.status(err.code ? RegistrationErrorsMatcher[err.code] : 500).json({ status: 'failed', message: err.message });
+        } else {
+            console.log(result); // todo logging
+            res.status(201).json(result);
+        }
+    })
+}
+
+export const loginUser = async (req: Request, res: Response, next: NextFunction) => {
+    const { email, password } = req.body;
+    // todo validate if all exists (mb with middleware)
+    authService.signInUser({
+        email: email,
+        password: password,
     }, (err: any, result: any) => {
         if (err) {
             console.error(err);
-            return;
+            res.status(500).json({ code: err.code, message: err.message})
+        } else {
+            console.log(result);
+            res.status(200).json(result);
+        }
+    })
+}
+
+export const loginOrRegisterOAuth = async (req: Request, res: Response, next: NextFunction) => {
+    const { oauth_token: oauthToken } = req.body;
+    authService.oAuthSignIn({
+        oauth_token: oauthToken,
+        provider: 'google'
+    }, (err: any, result: any) => {
+        if (err) {
+            console.error(err);
+            res.status(500).json({ code: err.code, message: err.message})
         }
         console.log(result);
-        res.status(200).json(res);
-    })
+        res.status(200).json(result);
+    });
+
+}
+
+
+export const getMe = async (req: Request, res: Response, next: NextFunction) => {
+    const user = req.user;
+    console.log('[user]', user);
+    res.status(200).json(user);
+
 }
